fixed overflow issues on wide modals

--- a/src/components/Modal/style.scss
+++ b/src/components/Modal/style.scss
@@ -76,6 +76,7 @@
       text-align: left;
       vertical-align: middle;
       z-index: $z-index-modal-window;
+      max-width: 100%;
       &:focus {
         outline: none;
       }
@@ -108,6 +109,7 @@
         border-bottom-left-radius: $input-border-radius;
         border-bottom-right-radius: $input-border-radius;
         padding: $content-padding;
+        overflow-y: auto;
       }
     }
   }
